plugins {
	id 'java'
}

repositories {
	mavenLocal()
	maven {
		url = 'https://repo.runelite.net'
		content {
			includeGroupByRegex("net\\.runelite.*")
		}
	}
	mavenCentral()
}

// Pinned (not RuneLite's usual 'latest.release') so the Nix flake's hermetic
// build (flake.nix's `plugin` package) resolves the exact same dependency
// set every time — see plugin/deps.json.
def runeLiteVersion = '1.12.38'

dependencies {
	compileOnly group: 'net.runelite', name: 'client', version: runeLiteVersion

	testImplementation group: 'net.runelite', name: 'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name: 'jshell', version: runeLiteVersion
	testImplementation 'junit:junit:4.13.2'
	testImplementation 'org.slf4j:slf4j-simple:1.7.36'
	testImplementation 'org.mockito:mockito-core:5.14.2'
}

group = 'com.oldstats'
version = '1.0.0'

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.release.set(11)
}

tasks.named('test') {
	useJUnit()
	systemProperty 'runelite.static.test', 'true'
}

tasks.register('runClient', JavaExec) {
	group = 'application'
	description = 'Launches a real RuneLite client with this plugin preloaded (see OldStatsPluginTest.java)'
	mainClass = 'com.oldstats.OldStatsPluginTest'
	classpath = sourceSets.test.runtimeClasspath
	jvmArgs "-ea", // required by ExternalPluginManager.loadBuiltin as a development safety check
		"-XX:ErrorFile=/home/gipphe/.local/share/bolt-launcher/.runelite/logs/jvm_crash_pid_%p.log",
		"-Duser.home=/home/gipphe/.local/share/bolt-launcher"
}

// No extra runtime dependencies beyond what `client` (compileOnly) already
// provides on RuneLite's own classpath, so the plain `jar` task's output is
// sufficient for sideloading — no fat-jar/shadow plugin needed. Output:
// build/libs/oldstats-plugin-<version>.jar — copy into
// ~/.runelite/sideloaded-plugins/ (see README.md).
